--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -199,7 +199,7 @@
 
 <!-- Listing Cards -->
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-  <% for(let listing of allListings) { %>
+  <% for(let listing of listings) { %>
   <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card col listing-card">
       <img
